# Django-react-mpa

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
api/: urls.py
frontend/src/: App.tsx
frontend/src/pages/: TaskDetail.tsx
sample/: admin.py  apps.py
server/: asgi.py  urls.py  wsgi.py
server/settings/: base.py  dev.py  prod.py
static/css/: style.css
templates/: base.html  index.html
