[tool.poetry]
name = "django-react-mpa"
version = "0.1.0"
description = ""
authors = ["taku820801 <takuchanpower@gmail.com>"]
readme = "README.md"
packages = [{include = "django_react_mpa"}]

[tool.poetry.dependencies]
python = "^3.10"
asgiref = "^3.7.2"
django = "^4.2.2"
django-cors-headers = "^4.1.0"
django-vite = "^2.1.3"
pytz = "^2023.3"
sqlparse = "^0.4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
